# PushOver

./: .env.example  .env.test.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md
.github/: dependabot.yml
.github/workflows/: d1-backup.yml
.omc/: project-memory.json
.omc/sessions/: 3d300b9e-3243-4e4d-b326-7ad6f1a078f2.json
.omc/state/: agent-replay-3d300b9e-3243-4e4d-b326-7ad6f1a078f2.jsonl  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-25T17-56-58-630Z.json  checkpoint-2026-03-25T18-04-02-129Z.json  checkpoint-2026-03-25T18-11-01-550Z.json  checkpoint-2026-03-25T19-07-42-086Z.json
.superpowers/brainstorm/3375-1774612466/: .server-stopped  settings-design-v2.html  settings-design.html  settings-options.html
crates/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs  types.rs
crates/cli/src/commands/: history.rs  mod.rs  register.rs  send.rs
crates/sdk/: Cargo.toml
crates/sdk/.omc/: project-memory.json
crates/sdk/.omc/state/: agent-replay-3d300b9e-3243-4e4d-b326-7ad6f1a078f2.jsonl  last-tool-error.json  subagent-tracking.json
crates/sdk/.omc/state/checkpoints/: checkpoint-2026-03-25T18-47-39-056Z.json
crates/sdk/src/: error.rs  http_client.rs  lib.rs  models.rs  webhook.rs
crates/sdk/tests/: integration_test.rs
crates/worker/: Cargo.toml  package.json  pnpm-lock.yaml  wrangler.toml
crates/worker/src/: crypto.rs  db.rs  kv.rs  lib.rs  middleware.rs  pushover.rs  queue.rs  r2.rs  recovery.rs  routes.rs  types.rs
dashboard/: package.json  playwright.config.ts  pnpm-lock.yaml  wrangler.toml
dashboard/playwright-report/: index.html
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/history/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/settings/components/: NotificationTab.tsx  PushOverTab.tsx  WorkerTab.tsx
dashboard/src/app/settings/hooks/: useSettings.ts
dashboard/src/components/: GlassNav.tsx
dashboard/src/lib/: api.ts  settings.ts
dashboard/test-results/: .last-run.json
dashboard/tests/: dev.spec.ts  loc.spec.ts
dashboard/tests/e2e/: basic.spec.ts
docs/: 2026-04-06-apple-redesign-design.md  ProjectStatus.md
docs/superpowers/plans/: 2026-03-26-pushover-serverless.md  2026-03-27-dashboard-settings.md  2026-03-27-opentofu-migration.md  2026-03-29-v0.2.0-queue-kv-r2.md  2026-04-06-apple-redesign.md  2026-04-07-makefile-task-runner.md
docs/superpowers/specs/: 2026-03-26-pushover-serverless-design.md  2026-03-27-dashboard-settings-design.md  2026-03-27-opentofu-migration-design.md  2026-03-28-api-test-design.md  2026-04-07-makefile-task-runner-design.md
infrastructure/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  variables.tf
migrations/: 0001_init.sql  0002_add_api_token.sql  0003_api_tokens.sql  0004_v020_queue_kv.sql
scripts/: sync-wrangler.sh  task-runner.sh
tests/: api-test.sh  cli-test.sh
