[package]
name = "pushover-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pushover"
path = "src/main.rs"

[dependencies]
pushover-sdk = { path = "../sdk" }
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
anyhow = "1"
dirs = "5"
serde.workspace = true
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
