[package]
name = "pushover-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = { version = "0.11", features = ["json", "multipart"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[features]
default = ["reqwest"]
cloudflare-worker = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys"]
webhook = ["hmac", "sha2", "hex"]

[dev-dependencies]
wiremock = "0.5"
tokio = { workspace = true }
