[package]
name = "pushover-worker"
version.workspace = true
edition.workspace = true

[dependencies]
pushover-sdk = { path = "../sdk", features = ["cloudflare-worker"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
worker = { version = "0.7", features = ["d1", "queue"] }
console_error_panic_hook.workspace = true
uuid = { version = "1.0", features = ["serde", "v4", "js"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[lib]
crate-type = ["cdylib", "rlib"]
